Changelog for Rowboat.

Rowboat 1.1.0
==============
- Add returnFormat param for returning data in JSON format
- [#4283] Adjust limit property to default to 10

Rowboat 1.0.1
==============
- Refactoring to allow for other database drivers to be developed
- Fix issue with bindParam/Value

Rowboat 1.0.0
==============
- Added more robust debug ability, with debugging table and sql parameter support
- Commented all methods
- Initial release, with sort, limit, where and columns support.